--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
+/gh-pages/
+
+
 
 # Created by https://www.toptal.com/developers/gitignore/api/java,kotlin,eclipse,visualstudiocode,intellij,maven
 # Edit at https://www.toptal.com/developers/gitignore?templates=java,kotlin,eclipse,visualstudiocode,intellij,maven
@@ -100,14 +103,14 @@ local.properties
 # When using Gradle or Maven with auto-import, you should exclude module files,
 # since they will be recreated, and may cause churn.  Uncomment if using
 # auto-import.
-# .idea/artifacts
-# .idea/compiler.xml
-# .idea/jarRepositories.xml
-# .idea/modules.xml
-# .idea/*.iml
-# .idea/modules
-# *.iml
-# *.ipr
+.idea/artifacts
+.idea/compiler.xml
+.idea/jarRepositories.xml
+.idea/modules.xml
+.idea/*.iml
+.idea/modules
+*.iml
+*.ipr
 
 # CMake
 cmake-build-*/
