--- a/src/main/resources/manifest.json
+++ b/src/main/resources/manifest.json
@@ -7,7 +7,7 @@
     "theme_color": "black",
     "scope": ".",
     "description": "Randomize group members.",
-    "lang": "en-US",
+    "lang": "en",
     "icons": [
         {
             "src": "icon/random_16.png",
