--- a/src/main/resources/manifest.json
+++ b/src/main/resources/manifest.json
@@ -2,7 +2,7 @@
     "name": "Group Randomizer",
     "short_name": "Group Randomizer",
     "start_url": "index.html",
-    "display": "standalone",
+    "display": "minimal-ui",
     "background_color": "#212529",
     "theme_color": "black",
     "scope": ".",
