--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,7 @@
         <kotlin.version>1.6.10</kotlin.version>
         <kotlin.code.style>official</kotlin.code.style>
         <junit.version>4.12</junit.version>
+        <kotlinx-serialization.version>1.3.2</kotlinx-serialization.version>
     </properties>
 
     <dependencies>
@@ -37,12 +38,12 @@
         <dependency>
             <groupId>org.jetbrains.kotlinx</groupId>
             <artifactId>kotlinx-serialization-core-js</artifactId>
-            <version>1.3.1</version>
+            <version>${kotlinx-serialization.version}</version>
         </dependency>
         <dependency>
             <groupId>org.jetbrains.kotlinx</groupId>
             <artifactId>kotlinx-serialization-json-js</artifactId>
-            <version>1.3.1</version>
+            <version>${kotlinx-serialization.version}</version>
         </dependency>
     </dependencies>
 
